# SageAI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  temp.py
example/src/: main.py
examples/: README.md
examples/1-basic/src/: main.py
examples/1-basic/src/functions/get_current_weather/: function.py  test.json
examples/2-advanced/: README.md
examples/2-advanced/src/: main.py
examples/2-advanced/src/functions/weather/get_current_weather/: function.py  test.json  types.py
examples/2-advanced/src/functions/weather/get_forecast_weather/: function.py  test.json  types.py
examples/advanced/: README.md
examples/advanced/src/: customvectordb.py  main.py  vectordb.py
examples/advanced/src/functions/get_random_number/: function.py
examples/advanced/src/functions/weather/get_current_weather/: function.py  test.json  types.py
examples/advanced/src/functions/weather/get_forecast_weather/: function.py  test.json  types.py
examples/basic/: README.md
examples/basic/src/: main.py
examples/src/: advanced.py  basic.py  main.py
examples/src/functions/get_current_weather/: function.py
sageai/: __init__.py  config.py  main.py  sageai.py  vector_search.py
sageai/services/: default_vectordb_service.py  defaultvectordb_service.py  openai.py  openai_service.py  vector_db.py  vector_search.py
sageai/tests/: integration.py  main.py  unit.py  utils.py
sageai/types/: abstract_vectordb.py  function.py  log_level.py  message.py
sageai/utils/: __init__.py  file_utilities.py  format_config_args.py  generate_functions_map.py  inspection_utilities.py  logger.py  model_utilities.py  openai_utilities.py  process_timer.py
test_functions/func1/: function.py
