[tool.poetry]
name = "sageai"
version = "0.1.3"
description = "File-based functions for ChatGPT's function calling with Pydantic support"
authors = ["Samanimkr <Samanimkr@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python", "openai", "functions", "chatgpt", "gpt4", "genai"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydantic = ">=1.6,<=1.10.12"
openai = "^0.28.1"
numpy = "^1.26.0"
black = "^23.9.1"
qdrant-client = "^1.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
