[tool.poetry]
name = "sageai"
version = "1.0.0"
description = "File-based functions for ChatGPT's function calling with Pydantic support"
authors = ["JUNIORCO <sami@lasso.gg>", "Samanimkr <Samanimkr@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python", "openai", "functions", "chatgpt", "gpt4", "genai", "function-calling"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pydantic = ">=1.6,<=1.10.12"
openai = ">=0.27.0"
qdrant-client = ">=1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
